--- a/activity-library/app/src/main/res/layout/activity_main.xml
+++ b/activity-library/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -31,4 +31,4 @@
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="144dp"
             app:layout_constraintHorizontal_bias="0.49" android:onClick="onSend"
             android:layout_marginTop="92dp" app:layout_constraintTop_toBottomOf="@+id/txtOutput"/>
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
