--- a/activity-library/app/src/main/res/layout/activity_main.xml
+++ b/activity-library/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,8 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        tools:context=".MainActivity"
+        android:background="@color/colorBackground">
     <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -22,7 +23,7 @@
             android:id="@+id/txtOutput" android:layout_marginEnd="40dp" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="40dp"
             app:layout_constraintHorizontal_bias="0.493" android:layout_marginTop="64dp"
-            app:layout_constraintTop_toBottomOf="@+id/editMessage"/>
+            app:layout_constraintTop_toBottomOf="@+id/editMessage" android:background="@android:color/white"/>
     <Button
             android:text="send"
             android:layout_width="wrap_content"
